# MED_Agent

./: .env  .gitignore  CLAUDE.md  README.md  Task_assignments.md  pyproject.toml  render.yaml
agents/: runner.py
backend/: main.py  requirements.txt
backend/models/: schemas.py
backend/routers/: appointments.py  auth.py  doctors.py  webhook.py
backend/services/: discord.py  supabase_client.py  whatsapp.py
database/: dummy_data.sql  schema.sql  sessions_schema.sql
frontend/app/: layout.tsx  page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/doctor/cases/: page.tsx
frontend/app/doctor/login/: page.tsx
frontend/components/: AlertCard.tsx  ChatWidget.tsx  ReasoningCard.tsx
frontend/lib/: api.ts  supabase.ts
medagents/: config.py  dispatch_agent.py  guidance_agent.py  logging_agent.py  main_agent.py  runner.py  session.py  specialists.py  tools.py  triage.py  triage_agent.py
medagents/tools/: __init__.py  find_doctor.py  save_log.py  send_alert.py
