[project]
name = "med-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "openai>=2.33.0",
    "openai-agents>=0.15.1",
    "pydantic>=2.13.3",
    "python-dotenv>=1.2.2",
    "supabase>=2.29.0",
    "uvicorn[standard]>=0.46.0",
]
